--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "karma-mocha": "^0.1.9",
     "karma-chai-plugins": "^0.2.3",
     "sinon": "^1.12.1",
-    "karma-sinon": "^1.0.3"
+    "karma-sinon": "^1.0.3",
+    "grunt-ng-annotate": "^0.7.0"
   }
 }
